--- a/styles.css
+++ b/styles.css
@@ -4864,7 +4864,79 @@ textarea.form-control-lg {
   border-top-right-radius: 0.2rem;
   border-bottom-right-radius: 0.2rem;
 }
+.work {
+  padding: 30px 0;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--primary);
+}
 
+.work h2 {
+  color: var(--secondary);
+}
+
+.grid{
+  width: 80%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+}
+
+.projects-grid {
+  width: 70%;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  
+  gap: 10px;
+}
+
+.project {
+  border: solid;
+  color: black;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  text-decoration: none;
+  background-size: cover;
+  background-position: center;
+  opacity: 0.5;
+}
+/* Projects and work */
+.project:hover {
+  opacity: 1.0;
+}
+
+.run-buddy {
+  grid-column: 1/3;
+  grid-row: span 2;
+  background-image: url("../assets/run-buddy-pic.jpg");
+}
+
+.two{
+  background-image: url("../assets/inprogress.jpg");
+  background-position: 50% 50%;
+}
+
+.three {
+  background-image: url("../assets/inprogress.jpg");
+  background-position: 60% 50%;
+}
+
+.four {
+  background-image: url("../assets/inprogress.jpg");
+}
+
+.five {
+  background-image: url("../assets/inprogress.jpg");
+}
+
+.projectl {
+  background-color: lightgray;;
+  color: var(--primary);
+  padding: 10px;
+}
+/*work  end */
 .badge {
   display: inline-block;
   padding: 0.35em 0.65em;
