--- a/styles.css
+++ b/styles.css
@@ -11485,3 +11485,29 @@ section.resume-section .resume-section-content {
     padding-bottom: 5rem;
   }
 }
+section.work-section {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  max-width: 75rem;
+}
+section.work-section .work-section-content {
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  section.work-section {
+    min-height: 100vh;
+  }
+}
+@media (min-width: 992px) {
+  section.work-section {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+}
